...
					/>
				</FunctionalMenu>
				<Button
					onPress={onGuestMode}
					testID='welcome-guest-mode'
				>
					游客模式
				</Button>
			</View>
		</View>
	)
}

...

				{step < 1 && (
					<Button
						onPress={() => goToStep(step + 1)}
						testID='welcome-next-step'
					>
						下一步
					</Button>
				)}
			</Dialog.Actions>
		</>
	)
}
...
