...
							/>
						)}
						onPress={() => router.push('/settings/playback')}
					/>
					<Divider style={styles.divider} />
					<List.Item
						title='通用'
						description='账号、更新、日志、调试'
						left={(props) => (
							<List.Icon
								{...props}
								icon='cog'
							/>
...
