...
					label='标题'
					value={title}
					onChangeText={setTitle}
					mode='outlined'
					numberOfLines={1}
					textAlignVertical='top'
					testID='create-playlist-title-input'
				/>
				<TextInput
					label='描述'
					onChangeText={setDescription}
					value={description ?? undefined}
					mode='outlined'
...
			<Dialog.Actions>
				<Button onPress={handleDismiss}>取消</Button>
				<Button
					onPress={handleConfirm}
					testID='create-playlist-confirm-button'
				>
					确定
				</Button>
			</Dialog.Actions>
		</>
	)
}

...
