...
						ListHeaderComponent={
							<PlaylistHeader
								title='最近常听'
								subtitles='最近14天最常播放的歌曲'
								description={undefined}
								mainButtonIcon='play'
								mainButtonText='播放全部'
								id='recently-played'
								onClickMainButton={handlePlayAll}
								primaryButtonColor={primaryButtonColor}
								primaryButtonTextColor={primaryButtonTextColor}
								secondaryButtonContainerColor={secondaryButtonContainerColor}
								secondaryButtonIconColor={secondaryButtonIconColor}
...
