...

	const handleTrackPress = useCallback(
		(track: Track) => {
			if (track.uniqueKey === currentTrackId) return
			if (!ignoreAlertReplacePlaylist) {
				alert(
					'替换播放列表',
					'点击列表中的单曲会直接替换当前播放列表，是否继续？（下次不再提醒）',
					[
						{ text: '取消' },
						{
							text: '确定',
							onPress: () => {
								setIgnoreAlertReplacePlaylist(true)
								void playAll(track.uniqueKey)
							},
						},
					],
...
