...
							onPress={() =>
								router.navigate({
									pathname: '/playlist/local/[id]',
									params: { id: linkedPlaylistId.toString() },
								})
							}
							testID='playlist-header-main-button'
							buttonColor={primaryButtonColor}
							textColor={primaryButtonTextColor}
						>
							进入播放列表
						</Button>
					) : (
...
