...
	return (
		<>
			<HighFreqRow style={{ paddingBottom: 12 }}>
				<PlayerDownloadButton onAction={onAction} />
				{currentTrack?.source === 'bilibili' && (
					<HighFreqButton
						label='评论区'
						icon='comment-text-outline'
						onPress={() =>
							onAction(() =>
								router.navigate({
									pathname: '/comments/[bvid]',
									params: { bvid: currentTrack.bilibiliMetadata.bvid },
...
