...
							router.navigate({
								pathname: '/comments/[bvid]',
								params: { bvid: currentTrack.bilibiliMetadata.bvid },
							})
						}
					}}
					testID='player-open-comments'
				/>
				<IconButton
					icon='format-list-bulleted'
					size={24}
					iconColor={colors.onSurfaceVariant}
					onPress={() => {
...
