...
											index={index}
											// oxlint-disable-next-line react/no-array-index-key
											key={index}
										>
											<View
												style={styles.commentImage}
												testID='comment-image'
											>
												<Image
													source={{ uri: pic.img_src }}
													style={styles.commentImageInner}
													contentFit='contain'
												/>
...
