...
								elevation={0}
								mode='bar'
								style={[
									styles.searchbar,
									{ backgroundColor: colors.surfaceVariant },
								]}
								testID='search-bar'
							/>
						</View>
						<SearchSuggestions
							query={deferredSearchQuery}
							visible={searchFocused || searchQuery.length > 0}
							onSuggestionPress={handleSuggestionPress}
...
